[project]
name = "undercover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "scikit-network>=0.33.3",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "networkx>=3.2.0",
    "pandas>=2.1.0",
    "tqdm>=4.67.1",
    "sentence-transformers>=5.1.0",
]
